# okapi-operation

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  publish.sh  rustfmt.toml
.github/workflows/: ci.yml
okapi-examples/: Cargo.toml
okapi-examples/src/: main.rs
okapi-operation/: CHANGELOG.md  Cargo.toml
okapi-operation-macro/: CHANGELOG.md  Cargo.toml
okapi-operation-macro/src/: error.rs  lib.rs  utils.rs
okapi-operation-macro/src/operation/: cookie.rs  external_docs.rs  header.rs  mod.rs  parameters.rs  path.rs  query.rs  request_body.rs  response.rs  security.rs
okapi-operation-macro/src/operation/request_body/: axum.rs  mod.rs
okapi-operation/docs/: axum_integration.md  root.md
okapi-operation/src/: builder.rs  components.rs  lib.rs  to_media_types.rs  to_responses.rs  utils.rs
okapi-operation/src/axum_integration/: axumyaml.rs  handler_traits.rs  method_router.rs  mod.rs  router.rs  trait_impls.rs  yaml.rs
okapi-operation/src/axum_integration/yaml/: mod.rs
okapi-operation/tests/: axum_integration.rs  axum_integration_macros.rs  base.rs
speka/: Cargo.toml
speka-axum/: Cargo.toml
speka-examples/: Cargo.toml
speka-examples/src/: main.rs
speka-macro/: CHANGELOG.md  Cargo.toml
speka-macro/src/: error.rs  utils.rs
speka-macro/src/operation/: cookie.rs  header.rs  mod.rs  path.rs  reference.rs  response.rs
speka/docs/: axum_integration.md  root.md
speka/src/: builder.rs  components.rs  lib.rs  to_media_types.rs  to_responses.rs
speka/src/axum_integration/: handler_traits.rs  operations.rs  router.rs  trait_impls.rs
speka/tests/: axum_integration.rs  base.rs
