[workspace.package]
version = "0.3.0-rc4"
authors = ["Andrei Kononov flowneee3@gmail.com"]
edition = "2021"
license = "MIT"
keywords = ["rust", "openapi", "swagger", "axum"]
categories = ["web-programming"]
readme = "../README.md"
repository = "https://github.com/Flowneee/okapi-operation"

[workspace]
resolver = "2"
members = [
    "./okapi-operation-macro",
    "./okapi-operation",
    "./okapi-examples"
]
