[workspace.package]
version = "0.3.0"
authors = ["Andrei Kononov flowneee3@gmail.com"]
categories = ["web-programming"]
edition = "2021"
keywords = ["rust", "openapi", "swagger", "axum"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Flowneee/okapi-operation"

[workspace]
resolver = "2"
members = [
  "./okapi-examples",
  "./okapi-operation",
  "./okapi-operation-macro",
]
