[package]
name = "okapi-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
okapi-operation = { path = "../okapi-operation", features = ["default", "yaml"] }
okapi-operation-macro = { path = "../okapi-operation-macro" }
