[package]
name = "okapi-examples"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
okapi-operation = { path = "../okapi-operation", features = ["axum", "yaml"] }
okapi-operation-macro = { path = "../okapi-operation-macro", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
