[package]
name = "okapi-operation-macro"
description = "Macro implementation for okapi-operation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
lazy_static = { version = "1", optional = true}
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1"

[features]
axum = []
legacy_lazy = ["lazy_static"]

[dev-dependencies]
assert_matches = "1"
