[package]
name = "okapi-operation-macro"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Macro implementation for okapi-operation"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"

[features]
axum = []

[dev-dependencies]
assert_matches = "1"
