[package]
name = "okapi-operation"
description = "Procedural macro for generating OpenAPI operation specification (using okapi)"
version = "0.3.0-rc3"
authors = ["Andrey Kononov flowneee3@gmail.com"]
edition = "2021"
license = "MIT"
keywords = ["rust", "openapi", "swagger", "axum"]
categories = ["web-programming"]
readme = "../README.md"
repository = "https://github.com/Flowneee/okapi-operation"

[dependencies]
okapi-operation-macro = { path = "../okapi-operation-macro", version = "0.2", optional = true }

anyhow = "1"
bytes = "1.4"
http = "1"
indexmap = "2.2.6"
mime = "0.3"
okapi = { version = "0.7.0-rc.1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }

axum = { version = "0.7", optional = true }
tower = { version = "0.5", default-features = false, optional = true }
paste = { version = "1", optional = true }
serde_yaml = { version = "0.8", optional = true }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[features]
default = ["macro"]

macro = ["okapi-operation-macro"]
yaml = ["serde_yaml"]

axum = ["dep:axum", "paste", "tower", "okapi-operation-macro/axum"]
# Deprecated, use feature `axum` instead
axum-integration = ["axum"]

[package.metadata.docs.rs]
all-features = true
