[package]
name = "okapi-operation"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Procedural macro for generating OpenAPI operation specification (using okapi)"

[dependencies]
okapi-operation-macro = { path = "../okapi-operation-macro", version = "0.3.0", optional = true }

anyhow = "1"
bytes = "1.4"
http = "1"
indexmap = "2.2.6"
mime = "0.3"
okapi = { version = "0.7.0-rc.1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }

axum = { version = "0.8", optional = true }
paste = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
tower = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["macro"]

macro = ["okapi-operation-macro"]
yaml = ["serde_yaml"]

axum = ["dep:axum", "paste", "tower", "okapi-operation-macro/axum"]
# Deprecated, use feature `axum` instead
axum-integration = ["axum"]

[package.metadata.docs.rs]
all-features = true
