[package]
name = "speka-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
speka = { path = "../speka", features = ["axum", "yaml"] }
speka-macro = { path = "../speka-macro", features = ["axum"] }
